src/sass/_article-feed.scss
@use 'baseline';
@use 'button';
@use 'functions';
@use 'list';
@use 'settings';
@use 'typography';

.article-feed__list {
  @include list.basics();
  margin-top: 0;

  p:last-child {
    margin-bottom: 0;
  }
}

.article-feed__item {
  border: 1px solid #cfd8dc;
  background-color: #fff;
  margin-bottom: baseline.increments(1);

  &:first-child {
    border-top-width: 0;
  }

  @media screen and (min-width: settings.$breakpoint-narrow) {
    border-radius: 6px;

    &:first-child {
      border-top-width: 1px;
    }
  }

  &:last-child {
    margin-bottom: 0;
  }

  h3 {
    @include typography.sizing($font-size: settings.$base-font-measure, $line-height-in-increments: 3);
    font-weight: bold;
  }
}

.article-feed__item_contents {
  padding: baseline.increments(2) 1rem 0;
  margin-bottom: baseline.increments(3);
  @media screen and (min-width: settings.$breakpoint-narrow) {
    grid-column: 1 / 9;
    padding: baseline.increments(3) 1.5rem 0;
  }
}

.article-feed__item_header {
  @include typography.sizing($font-size: 14px, $line-height-in-increments: 2.5);
  display: flex;
  margin-bottom: baseline.increments(2);
}

.article-feed__item__avatar {
  width: 47px;
  height: 47px;
  border: 1px solid rgb(238, 238, 238);
  border-radius: 4px;
  flex: 0 0 47px;
  margin-right: 0.5rem;
}

.article-feed__item__date {
  font-family: Ubuntu, sans-serif;
  color: settings.$colour-grey-two;
  margin-left: auto;
}

.article-feed__item__title,
p.article-feed__item__title {
  font-family: Ubuntu, sans-serif;
  padding-right: functions.px-to-rem(116px);
}

.article-feed__item-toggle {
  @include typography.sizing(14px, 2.5);
  font-weight: normal;
  outline-width: 0;
  background: none;
  cursor: pointer;
  padding: functions.px-to-rem(7px) functions.px-to-rem(13px);
  width: functions.px-to-rem(107px);
  margin-bottom: baseline.increments(2);
}

.article-feed__item__read_more {
  display: block;
}

.article-feed__item_body {
  position: relative;
  width: 100%;
  margin-right: 1.5rem;

  ol,
  ul {
    margin-bottom: baseline.increments(3);
  }
}

.responses {
  padding: 0 1rem;
  @media screen and (min-width: settings.$breakpoint-narrow) {
    padding: 0 1.5rem;
  }
}

.responses__question {
  margin-bottom: baseline.increments(1);
}

.responses__actions {
  display: flex;
  justify-content: flex-start;
}

.responses__action {
  display: flex;
  margin-right: 1rem;
  align-items: center;
}

.responses__button {
  @include button.basics();
  padding-left: 0;
  background-color: settings.$colour-white;
}

